[package]
name = "nc"
version = "0.8.17"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/xushaohua/nc"
repository = "https://github.com/xushaohua/nc"
documentation = "https://docs.rs/nc"
description = "Access system calls directly"
edition = "2018"
license = "Apache-2.0"
publish = true
build = "build.rs"
keywords = ["syscall", "linux"]
categories = ["os", "no-std", "external-ffi-bindings"]
rust-version = "1.56.0"

[build-dependencies]
cc = "1.0.82"

[features]
default = ["std"]

# Provide impls for common standard library types like Path and PathBuf.
# Requires a dependency on the Rust standard library.
std = []

