[package]
name = "nc"
version = "0.9.5"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/xushaohua/nc"
repository = "https://github.com/xushaohua/nc"
documentation = "https://docs.rs/nc"
description = "Access system calls directly"
edition = "2021"
license = "Apache-2.0"
keywords = ["syscall", "linux"]
categories = ["os", "no-std", "external-ffi-bindings"]
rust-version = "1.63.0"

[build-dependencies]
cc = "1.1.30"

[features]
default = ["std"]

# Provide impls for common standard library types like Path and PathBuf.
# Requires a dependency on the Rust standard library.
std = []

