[package]
name = "nc"
version = "0.9.7"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/xushaohua/nc"
repository = "https://github.com/xushaohua/nc"
documentation = "https://docs.rs/nc"
description = "Access system calls directly"
edition = "2024"
license = "Apache-2.0"
keywords = ["syscall", "linux"]
categories = ["os", "no-std", "external-ffi-bindings"]
rust-version = "1.85.0"

[build-dependencies]
cc = "1.2.47"

[features]
default = ["std"]

# Provide impls for common standard library types like Path and PathBuf.
# Requires a dependency on the Rust standard library.
std = []

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

expect_used = "deny"
panic_in_result_fn = "deny"
panic = "deny"
unused_result_ok = "deny"
unwrap_used = "deny"

missing_errors_doc = "allow"
multiple_crate_versions = "allow"

[lints.rust]
dead_code = "allow"
unknown_lints = "allow"
warnings = "deny"
